more text in footer and body background change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html">Strona glowna</a>
             <a href="nauka-html.html">Nauka html</a>
             <a href="nauka-css.html">Nauka css</a>
-            <a href="nauka-js.html">Nauka javascript</a>
+            <a href="nauka-js.html">Nauka js</a>
         </nav>
     </header>
     <main>
@@ -64,7 +64,7 @@
         </section>
     </main>
     <footer>
-        Umiem podejmowac zle decyzje! <br>
+        Umiem podejmowac zle decyzje! To nie będzie fajna strona - poważnie!!! <br>
         <a href="#top ">Wroc na góre!</a>
     </footer>
     <script src="main.js "></script>
