--- a/nauka-css.html
+++ b/nauka-css.html
@@ -12,12 +12,14 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">Strona glowna</a>
-            <a href="nauka-html.html">Nauka html</a>
-            <a href="nauka-css.html">Nauka css</a>
-            <a href="nauka-js.html">Nauka js</a>
-        </nav>
+        <div class="nav">
+            <nav>
+                <div class="box-index"><a href="index.html">Strona glowna</a></div>
+                <div class="box-html"><a href="nauka-html.html">Nauka html</a></div>
+                <div class="box-css"><a href="nauka-css.html">Nauka css</a></div>
+                <div class="box-js"><a href="nauka-js.html">Nauka js</a></div>
+            </nav>
+        </div>
     </header>
     <main>
         <header>
