--- a/nauka-css.html
+++ b/nauka-css.html
@@ -10,36 +10,34 @@
 
 </head>
 
-<body>
+<body class="fullbody">
     <header>
-        <div class="nav">
-            <nav>
-                <div class="box-index"><a href="index.html">Strona glowna</a></div>
-                <div class="box-html"><a href="nauka-html.html">Nauka html</a></div>
-                <div class="box-css"><a href="nauka-css.html">Nauka css</a></div>
-                <div class="box-js"><a href="nauka-js.html">Nauka js</a></div>
-            </nav>
-        </div>
+        <nav class="navigation">
+            <a class="navigation__link navigation__link-home" href="index.html">Strona glowna</a>
+            <a class="navigation__link" href="nauka-html.html">Nauka html</a>
+            <a class="navigation__link" href="nauka-css.html">Nauka css</a>
+            <a class="navigation__link" href="nauka-js.html">Nauka js</a>
+        </nav>
     </header>
     <main>
         <header>
-            <h1 class="obi-one">Nauka css</h1>
-            <h2>- krok po kroku!</h2>
+            <h1 class="title">Nauka css</h1>
+            <h2 class="title__second">- krok po kroku!</h2>
 
         </header>
-        <img src="css.png" alt="logo2">
+        <img class="image" src="css.png" alt="logo2">
         <section>
 
-            <h3>O co chodzi w tych stylach?</h3>
+            <h3 class="title__third">O co chodzi w tych stylach?</h3>
 
-            <p>Sprobujemy zmienic styl h3 za pomoca kropki z przodu
+            <p>Sprobujemy zmienic styl h3 za pomoca class?!
             </p>
 
 
 
 
     </main>
-    <footer>
+    <footer class="fullbody fullbody__footer">
         Umiem podejmowac zle decyzje! <br>
         <a href="#top">Wroc na góre!</a>
     </footer>
