--- a/nauka-js.html
+++ b/nauka-js.html
@@ -10,35 +10,33 @@
 
 </head>
 
-<body>
+<body class="fullbody">
     <header>
-        <div class="nav">
-            <nav>
-                <div class="box-index"><a href="index.html">Strona glowna</a></div>
-                <div class="box-html"><a href="nauka-html.html">Nauka html</a></div>
-                <div class="box-css"><a href="nauka-css.html">Nauka css</a></div>
-                <div class="box-js"><a href="nauka-js.html">Nauka js</a></div>
-            </nav>
-        </div>
+        <nav class="navigation">
+            <a class="navigation__link navigation__link-home" href="index.html">Strona glowna</a>
+            <a class="navigation__link" href="nauka-html.html">Nauka html</a>
+            <a class="navigation__link" href="nauka-css.html">Nauka css</a>
+            <a class="navigation__link" href="nauka-js.html">Nauka js</a>
+        </nav>
     </header>
     <main>
         <header>
-            <h1 class="obi-one">Nauka javascript</h1>
-            <h2>- krok po kroku!</h2>
+            <h1 class="title">Nauka javascript</h1>
+            <h2 class="title__second">- krok po kroku!</h2>
         </header>
-        <img src="js.png" alt="logo3">
+        <img class="image" src="js.png" alt="logo3">
         <section>
 
-            <h3>Ulubione tagi</h3>
+            <h3 class="title__third">Ulubione tagi</h3>
 
-            <p>Tag br jest dosc istotny i go mozna czesto zaponiec!
+            <p>Tego to ja jeszcze nie rozumiem ;/
             </p>
 
 
 
 
     </main>
-    <footer>
+    <footer class="fullbody fullbody__footer">
         Umiem podejmowac zle decyzje! <br>
         <a href="#top">Wroc na góre!</a>
     </footer>
