--- a/index.html
+++ b/index.html
@@ -4,59 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krzystof Trojan</title>
+    <title>Krzysztof Trojan</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-
-
 </head>
 
-<body>
+
+
+<body class="fullbody">
     <header>
-        <div class="nav">
-            <nav>
-                <div class="box-index"><a href="index.html">Strona glowna</a></div>
-                <div class="box-html"><a href="nauka-html.html">Nauka html</a></div>
-                <div class="box-css"><a href="nauka-css.html">Nauka css</a></div>
-                <div class="box-js"><a href="nauka-js.html">Nauka js</a></div>
-            </nav>
-        </div>
+        <nav class="navigation">
+            <a class="navigation__link navigation__link-home" href="index.html">Strona glowna</a>
+            <a class="navigation__link" href="nauka-html.html">Nauka html</a>
+            <a class="navigation__link" href="nauka-css.html">Nauka css</a>
+            <a class="navigation__link" href="nauka-js.html">Nauka js</a>
+        </nav>
     </header>
     <main>
         <header>
-            <h1 class="obi-one">Krzysztof Trojan - strona glowna do nauki</h1>
+            <h1 class="title">Krzysztof Trojan - from hell!</h1>
         </header>
-        <h2>- amator kodu z celem zmiany pracy w najblizszej przyszlosci!</h2>
-        <img src="lap & code.png" alt="Cacko ">
+        <h2 class="title__second">- amator kodu z celem!</h2>
+        <img class="image" src="lap & code.png" alt="Cacko">
 
-
-
-
-        <section id="col">
-
-            <h3>O mnie!</h3>
-            <article>
+        <section class="section">
+            <h3 class="title__third">O mnie!</h3>
+            <article class="section section__article">
                 <p>Rocznik 85'. Polak. <b>Imigrant.</b> Obecnie Kanada od 2016r., wczesniej 3 lata w Holandii. </p>
                 <p>Co mnie nakreca, nie ma tego duzo, wiec po krotce: roadtripy, campingi, hiking, moje psy, moj kot i najwspalnialsza kobieta jaka spotkalem! ... no i troche komputery i fotografia jak mam zajawke (najczesciej do czasu kiedy nie trafie na
                     wiekszy problem).
                 </p>
             </article>
-
         </section>
 
-        <section>
+        <section class="section">
+            <h3 class="title__third">Jaki mam plan?</h3>
 
-            <h3>Jaki mam plan?</h3>
-            <article>
+            <article class="section section__article">
                 <p><strong>Chcialbym sie zajac frontendem profesjonalnie.</strong> Chcialbym zeby to byla moja glowna praca, albo chociaz na tyle powaze dorywcze zajecie zeby pozwolilo odlozyc kilka $. </p>
                 <p>Obecnie robie kurs <q><b><i>WTF</i></b> </q>- czyli poznaje elementy frontendu, a juz 25 stycnia zaczne 3 miesieczny <a href="https://comit.org "> kurs Javy. </a> Udalo mi sie dostac na darmowy kurs (jupi!) po ktorym mam szanse na platny
                     staz i dalsze zatrudnienie w IT. <br> A jak nie to i tak jest to dobre miejsce zeby zaczyc przygode z kodem w Kanadzie.
-
                     <a href="#col">Przejdz do notatek</a>'
                 </p>
             </article>
 
-            <h3>Co fajnego widzialem w Kanadzie?</h3>
-            <article>
+            <h3 class="title__third">Co fajnego widzialem w Kanadzie?</h3>
+
+            <article class="section section__article">
                 <p>Z ciekawszych miejsc napewno warto jest wsponiec:</p>
                 <ul>
                     <li> Peytho Lake</li>
@@ -69,7 +62,7 @@
             </article>
         </section>
     </main>
-    <footer>
+    <footer class="fullbody fullbody__footer">
         Umiem podejmowac zle decyzje! To nie będzie fajna strona - poważnie!!! <br>
         <a href="#top ">Wroc na góre!</a>
     </footer>
