--- a/nauka-css.html
+++ b/nauka-css.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="fullbody">
+<body>
     <header>
         <nav class="navigation">
             <a class="navigation__link navigation__link-home" href="index.html">Strona glowna</a>
@@ -19,7 +19,7 @@
             <a class="navigation__link" href="nauka-js.html">Nauka js</a>
         </nav>
     </header>
-    <main>
+    <main class="fullbody">
         <header>
             <h1 class="title">Nauka css</h1>
             <h2 class="title__second">- krok po kroku!</h2>
