--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krzysztof Trojan</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -53,15 +54,36 @@
             <h3 class="title__third">Co fajnego widzialem w Kanadzie?</h3>
 
             <article class="section section__article">
-                <p>Z ciekawszych miejsc napewno warto jest wsponiec:</p>
-                <ul>
-                    <li> Peytho Lake</li>
-                    <li> Rockies</li>
-                    <li> Vancover City</li>
-                    <li> Riding Mountain NP </li>
-                    <li> Lake Superior</li>
-                    <li> Tronto</li>
-                </ul>
+                <h4> Z ciekawszych miejsc napewno warto jest zwiedzić lub chociaż wsponiec:</h4>
+                <ol class="list">
+                    <li class="list__item">Alberta
+                        <ul>
+                            <li class="list__item-second"> Peytho Lake and Glacier Road to Jasper</li>
+                            <li class="list__item-second"> Banff town and Rockies</li>
+                            <li class="list__item-second"> Downtown Calgary</li>
+                        </ul>
+                    </li>
+                    <li class="list__item">Ontatio
+                        <ul>
+                            <li class="list__item-second"> Thunder Lake and Lake Superior</li>
+                            <li class="list__item-second"> Downtown Tronto and CN Tower</li>
+                            <li class="list__item-second"> Kenora</li>
+                        </ul>
+                    </li>
+                    <li class="list__item">Manitoba
+                        <ul>
+                            <li class="list__item-second"> Riding Mountain NP and Wasagaming Village </li>
+                            <li class="list__item-second"> Whiteshell Provincial Park </li>
+                            <li class="list__item-second"> Spruce Wood Provinsial Park </li>
+                        </ul>
+                    </li>
+                    <li class="list__item">British Columbia
+                        <ul>
+                            <li class="list__item-second"> Vancover City and Stanley Park</li>
+                            <li class="list__item-second"> Glacier NP and Ski resorts</li>
+                        </ul>
+                    </li>
+                </ol>
             </article>
         </section>
     </main>
