--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <h3 class="title__third">Co fajnego widzialem w Kanadzie?</h3>
 
-            <article class="section section__article">
+            <article class="section__article">
                 <h4> Z ciekawszych miejsc napewno warto jest zwiedzić lub chociaż wsponiec:</h4>
                 <ol class="list">
                     <li class="list__item">Alberta
