adding button/js error

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <main class="fullbody">
         <header class="fullbody__header">
             <h1 class="title">Krzysztof Trojan - from hell!</h1>
+            <br>
+            <button class="action--js">Zmień nagłówek</button>
         </header>
         <h2 class="title__second">- amator kodu z celem!</h2>
-        <img class="image" src="lap & code.png" alt="Cacko">
+        <img class="image" src="lap & code.png" alt="Lapek">
 
         <section class="section">
             <h3 class="title__third">O mnie!</h3>
